--- a/app/views/includes/header.pug
+++ b/app/views/includes/header.pug
@@ -4,21 +4,21 @@ doctype html
 html
     #message
         center.h2.display-2.formheading=message
-    #header
-        nav.nav-pills.nav-fill.rounded
-            ul.nav
-                li.nav-item.nav-link.active
-                    a(href='/')
-                        |Home
-                li.nav-item.nav-link.active
-                    a(href='/services')
-                        |Our Services
-                li.nav-item.nav-link.active 
-                    a(href='/gallery')
-                        |Gallery
-                li.nav-item.nav-link.active
-                    a(href='/quote')
-                        |Request a Quote
-                li.nav-item.nav-link.active
-                    a(href='/feedback')
-                        |Feedback
+    //- #header
+    //-     nav.nav-pills.nav-fill.rounded
+    //-         ul.nav
+    //-             li.nav-item.nav-link.active
+    //-                 a(href='/')
+    //-                     |Home
+    //-             li.nav-item.nav-link.active
+    //-                 a(href='/services')
+    //-                     |Our Services
+    //-             li.nav-item.nav-link.active 
+    //-                 a(href='/gallery')
+    //-                     |Gallery
+    //-             li.nav-item.nav-link.active
+    //-                 a(href='/quote')
+    //-                     |Request a Quote
+    //-             li.nav-item.nav-link.active
+    //-                 a(href='/feedback')
+    //-                     |Feedback
