--- a/app/views/savedCustomRequest.pug
+++ b/app/views/savedCustomRequest.pug
@@ -5,4 +5,4 @@ block content
     .container.text-center
         h4 Thank you!! Your custom request has been submitted!! Please allow one business day for a follow up phone call to confirm your request.
         .text-right
-            a(href='/Quote') Back 
+            a(href='/Quote').backlink Back 
