--- a/app/views/savingStandardRequest.pug
+++ b/app/views/savingStandardRequest.pug
@@ -5,4 +5,4 @@ block content
     .container.text-center
         h4 Thank you!! Your standard request has been received! Please allow one business day for a follow up phone call.
         .text-right
-            a(href='/Quote') Back
+            a(href='/Quote').backlink Back
