--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -1,21 +1,33 @@
 @import url("https://fonts.googleapis.com/css?family=Righteous&display=swap");
 body.container-fluid {
   font: 14px 'Righteous', cursive;
+  color: #008000;
 }
-a:select {
-  color: #800080;
+li.nav-item.nav-link {
+  background-color: #008000;
+  margin: 15px;
+  border-radius: 20px;
+}
+li.nav-item.nav-link:hover {
+  width: 15%;
+  background-color: #90ee90;
 }
 li.nav-item.nav-link.active {
   color: #008000;
-  background-color: #f5f5f5;
+  background-color: #90ee90;
 }
-li.nav-item.nav-link.active:hover {
-  background-color: #008000;
-  color: #f5f5f5;
+a {
+  color: #fff;
+}
+a:visited {
+  color: #fff;
 }
 /** End of Header page */
-.menuItem:hover {
-  font-size: larger;
+.backlink {
+  color: #008000;
+}
+.backlink:visited {
+  color: #008000;
 }
 .header {
   font: bolder;
@@ -25,6 +37,22 @@ li.nav-item.nav-link.active:hover {
   width: 75%;
 }
 /* End of Admin Login */
+#cleanOffice {
+  margin-left: 25%;
+  background-color: #008000;
+  color: #fff;
+}
+#cleanOffice:hover {
+  background-color: #90ee90;
+}
+#cleanResidence {
+  margin-left: 25%;
+  background-color: #008000;
+  color: #fff;
+}
+#cleanResidence:hover {
+  background-color: #90ee90;
+}
 .officeSpace {
   height: 75%;
   width: 75%;
@@ -46,16 +74,18 @@ p {
   text-align: center;
 }
 #serviceMsg {
-  border: 4px ridge #008000;
-  color: #008000;
+  border-radius: 20px;
+  background-color: #008000;
+  color: #fff;
   padding: 7px;
-  text-align: justify;
+  text-align: center;
 }
 #resServiceMsg {
-  border: 4px ridge #008000;
-  color: #008000;
+  border-radius: 20px;
+  background-color: #008000;
+  color: #fff;
   padding: 7px;
-  text-align: justify;
+  text-align: center;
 }
 /** End of Services page */
 #userMsg {
@@ -63,18 +93,123 @@ p {
 }
 /** End of admin login page */
 #RBStyle {
-  border: 1px solid #008000;
+  border: 4px double #008000;
   border-radius: 5px;
   padding: 3%;
 }
-.btns {
+#styleRadioBtns {
+  margin-left: 50%;
+}
+.col-3.thinking:hover {
+  background-color: #90ee90;
+}
+button.btn {
   background-color: #008000;
+  border-radius: 20px;
+  color: #fff;
+}
+button.btn:hover {
+  background-color: #90ee90;
+}
+input.btn {
+  background-color: #008000;
+  border-radius: 20px;
+  color: #fff;
+}
+input.btn:hover {
+  background-color: #90ee90;
+}
+#hidden {
+  width: 75%;
+  margin-left: 15%;
+  padding: 5%;
+  border: double 6px #008000;
+  border-radius: 5px;
+}
+.formDesign {
+  width: 50%;
+  margin-left: 25%;
+  padding: 5%;
+  border: double 6px #008000;
+  border-radius: 5px;
+}
+.form-control:hover {
+  border-color: #008000;
+}
+.requestForm {
+  width: 100%;
+  padding: 5%;
+  border: double 6px #008000;
+  border-radius: 5px;
+}
+#designReg {
+  border: double 6px #008000;
+  border-radius: 5px;
+  padding: 5%;
 }
 .custName {
   float: right;
 }
 .justify {
   text-align: justify;
+}
+.carouselPic {
+  height: 500px;
+  width: 1000px;
+  border-radius: 5px;
+}
+.styleCirc {
+  background-color: #008000;
+  height: 250px;
+  width: 250px;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 50px;
+  padding-top: 100px;
+  font-variant: annotation;
+}
+.styleCirc:hover {
+  border: 5px double #fff;
+}
+.parallax {
+  background-image: url("../images/cleaning1.jpg");
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.parallax2 {
+  background-image: url("../images/cleaning7.jpg");
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.parallax3 {
+  background-image: url("../images/CleaningIcons2.jpg");
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.galleryPic {
+  height: 450px;
+  width: 450px;
+  border-radius: 4px;
+}
+.feedback {
+  border: 5px double #008000;
+  border-radius: 4px;
+  font-style: italic;
+  padding: 5px;
+}
+.profile {
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
 }
 #footer {
   text-align: center;
