--- a/app/views/requestQuote.pug
+++ b/app/views/requestQuote.pug
@@ -5,88 +5,114 @@ block append head
     script(src='./javascripts/jquery-3.3.1.js')
     script(src='./javascripts/jsFunctions.js')
 block content
-    h3.text-center Choose from a list of our standard packages
-    .container
-        form(action='/savingStandardRequest', name='standardForm', method='post')
+    #header
+        nav.nav-pills.nav-fill.rounded
+            ul.nav
+                li.nav-item.nav-link
+                    a(href='/')
+                        |Home
+                li.nav-item.nav-link
+                    a(href='/services')
+                        |Our Services
+                li.nav-item.nav-link
+                    a(href='/gallery')
+                        |Gallery
+                li.nav-item.nav-link.active
+                    a(href='/quote')
+                        |Request a Quote
+                li.nav-item.nav-link
+                    a(href='/feedback')
+                        |Feedback
+    .parallax3
+        .container
+            form.requestForm(action='/savingStandardRequest', name='standardForm', method='post' onmouseenter='transformIt()'
+                style='background-color: white').form-group
+                .row
+                    .col.text-center
+                        h3.text-center Choose from a list of our standard packages
+                .row
+                    each serv in stdService
+                        .col-3.thinking#RBStyle
+                            .row
+                                .col.header
+                                    |Package Number: 
+                                .col
+                                    |#{serv.packageNo}
+                            .row
+                                .col
+                                    |Package Selection: 
+                                .col
+                                    select.form-control
+                                        option Select 
+                                        option(name='stdSelectedPkg') #{serv.packageSel[0]}
+                                        option(name='stdSelectedPkg') #{serv.packageSel[1]}
+                                        option(name='stdSelectedPkg') #{serv.packageSel[2]}
+                                        option(name='stdSelectedPkg') #{serv.packageSel[3]}
+                                        option(name='stdSelectedPkg') #{serv.packageSel[4]}
+                                        option(name='stdSelectedPkg') #{serv.packageSel[5]}
+                            .row#pkgFreq
+                                .col
+                                    |Frequency:
+                                .col
+                                    |#{serv.freq}
+                            .row#pkgPrice
+                                .col
+                                    |Price: 
+                                .col
+                                    |$#{serv.price}
+                            .row
+                                - var packNo = `${serv.packageNo}`; 
+                                - var packFreq = `${serv.freq}`;
+                                - var price = `${serv.price}`;
+                            .row.text-center
+                                input#styleRadioBtns(type='radio' name="radioGroup" value=`${packNo}, ${packFreq}, ${price}`  onchange='checkInfo();')
+                br
+                #hidden
+                    .row
+                        .col
+                            label(for="stdName") Name:
+                            input(type='text' name='stdName').form-control    
+                        .col
+                            label(for="stdEmail") Email:
+                            input(type='email' name='stdEmail').form-control
+                        .col
+                            label(for="stdPhone") Phone:
+                            input(type='text' name='stdPhone').form-control
+                    .row
+                        .col
+                            label(for='stdSelectedPkg') Selected Package:
+                            input(type='text' name='stdSelectedPkg')#selectedPkg.form-control
+                        .col
+                            label(for='stdSelectedFreq') Frequency:
+                            input(type='text' name='stdSelectedFreq')#selectedFreq.form-control
+                        .col
+                            label(for='stdSelectedPrice') Price:
+                            input(type='text' name='stdSelectedPrice')#selectedPrice.form-control
+                    .row
+                        button(type='button' onclick='submittedStandard()').btn.form-control Submit Standard Request
+        hr
+        .container
             .row
-                each serv in stdService
-                    .col-3#RBStyle
+                .col
+                    h3.text-center Or simply fill out the form below and someone will contact you to set up a custom package deal!
+            .row
+                .col    
+                    form.formDesign(action='/savedCustomRequest' method='post' name="CustomRequestForm"
+                        style='background-color: white').form-group
                         .row
-                            .col.header
-                                |Package Number: 
-                            .col
-                                |#{serv.packageNo}
+                            label Enter your name:
+                            br 
+                            input(type='text' name='name' required).form-control
+                            br
                         .row
-                            .col
-                                |Package Selection: 
-                            .col
-                                select.form-control
-                                    option Select 
-                                    option(name='stdSelectedPkg') #{serv.packageSel[0]}
-                                    option(name='stdSelectedPkg') #{serv.packageSel[1]}
-                                    option(name='stdSelectedPkg') #{serv.packageSel[2]}
-                                    option(name='stdSelectedPkg') #{serv.packageSel[3]}
-                                    option(name='stdSelectedPkg') #{serv.packageSel[4]}
-                                    option(name='stdSelectedPkg') #{serv.packageSel[5]}
-                        .row#pkgFreq
-                            .col
-                                |Frequency:
-                            .col
-                                |#{serv.freq}
-                        .row#pkgPrice
-                            .col
-                                |Price: 
-                            .col
-                                |$#{serv.price}
+                            label Enter your email address:
+                            br 
+                            input(type='email' name='email' required).form-control
                         .row
-                            - var packNo = `${serv.packageNo}`; 
-                            - var packFreq = `${serv.freq}`;
-                            - var price = `${serv.price}`;
-                        .row.text-center
-                            input(type='radio' name="radioGroup" value=`${packNo}, ${packFreq}, ${price}`  onchange='checkInfo();')
-            br
-            #hidden
-                .row
-                    .col
-                        label(for="stdName") Name:
-                        input(type='text' name='stdName').form-control    
-                    .col
-                        label(for="stdEmail") Email:
-                        input(type='email' name='stdEmail').form-control
-                    .col
-                        label(for="stdPhone") Phone:
-                        input(type='text' name='stdPhone').form-control
-                .row
-                    .col
-                        label(for='stdSelectedPkg') Selected Package:
-                        input(type='text' name='stdSelectedPkg')#selectedPkg.form-control
-                    .col
-                        label(for='stdSelectedFreq') Frequency:
-                        input(type='text' name='stdSelectedFreq')#selectedFreq.form-control
-                    .col
-                        label(for='stdSelectedPrice') Price:
-                        input(type='text' name='stdSelectedPrice')#selectedPrice.form-control
-                .row
-                    button(type='button' onclick='submittedStandard()').btns.btn.form-control Submit Standard Request
-    hr
-    h3.text-center Or simply fill out the form below and someone will contact you to set up a custom package deal!
-    .container
-        .row
-            .col    
-                form(action='/savedCustomRequest' method='post').form-group.formStyle
-                    .row
-                        label Enter your name:
-                        br 
-                        input(type='text' name='name' required).form-control
-                        br
-                    .row
-                        label Enter your email address:
-                        br 
-                        input(type='email' name='email' required).form-control
-                    .row
-                        label Enter your phone number:
-                        br 
-                        input(type='phone' name='phone').form-control
-                        br
-                    .row
-                        input(type='submit' value='Submit Custom Request').btn.form-control
+                            label Enter your phone number:
+                            br 
+                            input#phoneNum(type='phone' name='phone').form-control
+                            br
+                        .row
+                            input(type='submit' value='Submit Custom Request').btn.form-control
+                            //button(type='submit' value='Submit Custom Request' onclick='validatePhone(phoneNum)').btn.form-control Submit Custom Request
